--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,20 +1,27 @@
 <h1>Welcome to the Gossip Project</h1>
 
-<%= link_to 'My Gossips', controller: 'gossips' %>
+<!-- <%= link_to 'My Gossips', controller: 'gossips' %>  --> 
 
 <%= link_to 'New gossip', new_gossip_path %>
 
 <table>
   <tr>
-    <th>Title</th>
+    
+      <th>Title</th>
     <th>Text</th>
-    <th></th>
+    <th colspan="3"></th>
   </tr>
   <% @gossips.each do |gossip| %>
     <tr>
+    
       <td><%= gossip.title %></td>
       <td><%= gossip.text %></td>
+
       <td><%= link_to 'Show', gossip_path(gossip) %></td>
-    </tr>
+      <td><%= link_to 'Edit', edit_gossip_path(gossip) %></td>
+    
+       <td><%= link_to 'Destroy', gossip_path(gossip),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
   <% end %>
 </table>
