--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -15,7 +15,7 @@
 <%= render @gossip.comments %>
 <!-- For comments -->
 
-<!-- For comments -->
+<!-- For comments see _form.html-->
 <h2>Add a comment:</h2>
 <%= render 'comments/form' %>
 <!-- For comments -->
